# factory-fastapi-backend

./: .gitignore  API_COMPLIANCE_GAP_101_8082.md  API_DOC.md  API_SYNC_SUMMARY.md  BACKEND_CURRENT_IMPLEMENTED_API_DOC.md  BACKEND_FULL_LANDING_TASK_BOOK.md  BLOG_NACOS_FASTAPI_BIGSCREEN.md  CHANGELOG.md  COMPLETE_API_DOC.md  DASHBOARD_AGGREGATE_NACOS_CHAIN_API.md  DASHBOARD_OVERVIEW_API_DOC.md  DEVELOPER_PROJECT_REBUILD_SUMMARY.md  DEVICE_STATUS_WIDGET_8083_DOC.md  DEV_ENV_REBUILD_HANDOFF.md  FASTAPI_8082_REBUILD_TASK_BOOK.md  FASTAPI_FRONTEND_REBUILD_GUIDE.md  FRONTEND_DEMO_GUIDE.md  FRONTEND_GAP_API_COMPLETION.md  HARDWARE_STATE_MACHINE_SIMULATOR.md  PROTOCOL_API_GAP_AND_SUPPLEMENT.md  README.md  RUN_NACOS_BRIDGE_AND_SIMULATOR.md  TEAM_API_CONTRACT_8082_8083.md  build_blog_docs.py  docker-compose.backend.yml  docker-compose.server.yml  docker-compose.yml  openapi-8082-current.json
.github/workflows/: python-backend.yml
backend/: .env.example  Dockerfile  openapi.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  hardware_state_machine.py  main.py
backend/scripts/: generate_openapi.py
deploy/: README_BACKEND_ONLY_DOCKER.md  README_SERVER_DOCKER.md  backend.env.example  server.env.example
docs-site/: docusaurus.config.js  package.json  sidebars.js
docs-site/docs/: api-compliance-gap-101-8082.md  backend-current-api.md  backend-full-landing-task-book.md  complete-api-doc.md  dashboard-aggregate-nacos-chain-api.md  developer-rebuild.md  fastapi-8082-rebuild-task-book.md  frontend-gap-api-completion.md  (+6 more)
frontend/: Dockerfile  index.html  nginx.conf
(+5 files in other folders)
