[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for factory device status, Nacos config, and hardware state simulation."
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "httpx==0.28.1",
  "python-dotenv==1.1.0"
]

[tool.setuptools]
packages = ["app"]

